# HollowDetect

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  RELEASE.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  target_anom.cpp
examples/data/: baseline.example.json  exceptions.example.json
include/hollowdet/: api.h  evidence.h  json.h  peparse.h
schema/: anomaly.schema.json
src/: CMakeLists.txt
src/cli/: main.cpp
src/core/: config.cpp  evidence.cpp  json.cpp  memscan.cpp  peparse.cpp  process_enum.cpp  util.cpp
tests/: CMakeLists.txt  test_runner.cpp
