cmake_minimum_required(VERSION 3.20)
project(HollowDetect LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_definitions(UNICODE _UNICODE WIN32_LEAN_AND_MEAN NOMINMAX)
enable_testing()

if (MSVC)
  add_compile_options(/W4 /permissive- /EHsc)
  if (DEFINED ENV{CI})
    add_compile_options(/WX)
  endif()
else()
  add_compile_options(-Wall -Wextra -Wpedantic)
  if (DEFINED ENV{CI})
    add_compile_options(-Werror)
  endif()
endif()

add_subdirectory(src)
add_subdirectory(examples)
add_subdirectory(tests)

install(FILES schema/anomaly.schema.json DESTINATION share/hollowdetect)
install(FILES README.md LICENSE CHANGELOG.md RELEASE.md DESTINATION .)

set(CPACK_PACKAGE_NAME "HollowDetect")
set(CPACK_PACKAGE_VENDOR "Wythwool")
set(CPACK_PACKAGE_VERSION "0.6.0")
set(CPACK_GENERATOR "ZIP")
include(CPack)
